--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "vue-template-compiler": "^2.6.12"
     },
     "dependencies": {
+        "vee-validate": "^3.4.12",
         "vue-router": "^3.5.2"
     }
 }
